fix pagination styles on mobile

--- a/app/components/Pagination/Pagination.module.css
+++ b/app/components/Pagination/Pagination.module.css
@@ -12,7 +12,8 @@
 }
 
 .activePage {
-    border: 1px solid color(display-p3 0.37 0.1073 0.6327);
+    border: 1px solid white;
+    background-color: white;
     color: color(display-p3 0.37 0.1073 0.6327);
 }
 
